--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
+package-lock.json
 
 # testing
 /coverage
@@ -14,6 +13,7 @@
 /out/
 
 # production
+/.idea
 /build
 
 # misc
