--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "date-fns": "^4.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "next": "14.2.7",
