--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "axios": "^1.7.7",
     "date-fns": "^4.0.0",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.1",
-    "next": "14.2.7",
+    "next": "^14.2.13",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
     "qrjs": "^0.2.0",
